syntax = "proto3";

package models;

option go_package = "github.com/zemld/Scently/common/proto/models";

message Perfume {
  message Properties {
    string perfume_type = 1;
    repeated string family = 2;
    repeated string upper_notes = 3;
    repeated string core_notes = 4;
    repeated string base_notes = 5;
  };

  message ShopInfo {
    message Variant {
      int32 volume = 1;
      string link = 2;
      int32 price = 3;
    };

    string shop_name = 1;
    string domain = 2;
    optional string image_url = 3;
    repeated Variant variants = 4;
  };

  string brand = 1;
  string name = 2;
  string sex = 3;
  optional string image_url = 4;
  Properties properties = 5;
  repeated ShopInfo shops = 6;
};