syntax = "proto3";

package perfume.service;

import "models/requests.proto";

option go_package = "github.com/zemld/Scently/perfume-hub/internal/proto";

service PerfumeStorage {
  rpc GetPerfumes(requests.GetPerfumesRequest)
      returns (requests.GetPerfumesResponse);
  rpc UpdatePerfumes(requests.UpdatePerfumesRequest)
      returns (requests.UpdatePerfumesResponse);
};
